2010-03-10  Hideki Yamane <henrich@debian.or.jp>

	* patches/icedtea-fonts.patch: Use Sazanami instead of Kochi for
	Japanese font on Debian/Ubuntu.

2010-03-09  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc
	(consume_message): Handle the new reference field and send it back when
	sending proxy and cookie info.
	(get_proxy_info): Update response format for proxy information to make it
	consistent with new Gecko API.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc
	(newMessageOnBus): Account for the new reference field and send it back
	with the response.
	(sendWindow): Same.
	(eval): Same.
	(call): Same.
	(sendString): Same.
	(setMember): Same. Also, move responding code from _setMember to setMember
	for consistency and to solve a rather bad race condition that affected
	reliability.
	(sendMember): Account for the new reference field and send it back 
	with the response.
	(queue_processor): Move array index slots based on new positions with
	reference ids.
	(_setMember): Move response code back to setMember.
	* plugin/icedteanp/java/sun/applet/GetMemberPluginCallRequest.java
	(GetMemberPluginCallRequest): Change method signature to receive a
	reference identifier.
	(parse): Update to handle new reference identifiers.
	(serviceable): Removed method. serviceable() is now implemented in the
	parent class and uses unique reference identifiers.
	* plugin/icedteanp/java/sun/applet/GetWindowPluginCallRequest.java
	(GetWindowPluginCallRequest): Change method signature to receive a 
	reference identifier.
	(serviceable): Removed method. serviceable() is now implemented in the
	parent class and uses unique reference identifiers.
	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Added new
	statis private requestIdentityCounter variable that provides unique
	reference numbers.
	(createPanel): Send a dummy (0) reference number with initialization msg.
	(getRequestIdentifier): New method. Returns a unique reference number 